--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 --- 
-title: "Econometrics with R at SciencesPo [WIP]"
+title: "Introduction to Econometrics with R"
 author: "Florian Oswald and Jean-Marc Robin"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
@@ -16,21 +16,21 @@ description: "SciencesPo UG Econometrics online textbook. No Maths."
 
 
 
-# Econometrics at ScPo - WORK IN PROGRESS
+# Introduction {-}
 
 ![](ScPo.jpg)
 
-This is our book about Introductory Econometrics for 2nd year UGs at ScPo. We follow a practical approach with minimal reliance on maths and maximal reliance on practical learning.
+Welcome to Introductory Econometrics for 2nd year undergraduates at ScPo! On this page we outline the course and present the Syllabus. This is still **work in progress**.
 
-## Objective 
+## Objective {-}
 
-This course aims to teach you the basics of data analysis needed in a Social Sciences oriented University like SciencesPo. We purposefully start at a level that assumes no prior knowledge about statistics whatsoever. Our objective is to have you understand and be able to interpret linear regression analysis.
+This course aims to teach you the basics of data analysis needed in a Social Sciences oriented University like SciencesPo. We purposefully start at a level that assumes no prior knowledge about statistics whatsoever. Our objective is to have you understand and be able to interpret linear regression analysis. We will not rely on maths and statistics, but practical learning in order to teach the main concepts.
 
-## Syllabus and Requirements
+## Syllabus and Requirements {-}
 
-You can find the topics we want to go over in the left panel of this book. The later chapters are optional and depend on the speed with which we will proceed eventually. Chapters 1-4 are the core material of the course.
+You can find the topics we want to go over in the left panel of this page. The later chapters are optional and depend on the speed with which we will proceed eventually. Chapters 1-4 are the core material of the course.
 
-The only requirement is that you bring *your own personal computer* to each session. Before coming to each session, you should update the associated computer code by executing this command in your `R` console:
+The only requirement is that you bring *your own personal computer* to each session. We will be using the free statistical computing language [`R`](www.rproject.org) very intensively. Before coming to each session, you should update computer code associated to the course by executing the following three commands in your `R` console:
 
 ```R
 if (!require("devtools")) install.packages("devtools")
@@ -38,19 +38,29 @@ library(devtools)
 install_github(repo = "ScPoEcon/ScPoEconometrics")
 ```
 
-## Course Structure
+## Course Structure {-}
 
 This course is taught in several different groups across various campuses of SciencesPo. All groups will go over the same material, do the same exercises, and will have the same assessments.
 
 Groups meet once per week for 2 hours. The main purpose of the weekly meetings is to clarify any questions, and to work together through tutorials. The little theory we need will be covered in this book, and you are expected to read through this in your own time before coming to class. 
 
-### Assessments
+### This Book and Other Material {-}
+
+What you are looking at is an online textbook. You can therefore look at it in your browser (as you are doing just now), but you can also download it as a `pdf` file or as an `epub` file for your ebook-reader. We don't have any ambition to actually produce and publish a *book* for now, so you should just see this as a way to disseminate our lecture notes to you. 
+The second part of course material next to the book is an extensive suite of tutorials and interactive demonstrations, which are all contained in the `R` package that builds this book (and which you installed by issuing the above commands). 
+
+
+### Open Source {-}
+
+The book and all other content for this course are hosted under an open source license on github. You can contribute to the book by just clicking on the appropriate *edit* symbol in the top bar of this page.
+
+### Assessments {-}
 
 There will be 2 mid-term exams and one final exam.
 
-## Team
+## Team {-}
 
-## Communication
+## Communication {-}
 
 
 
