--- a/index.Rmd
+++ b/index.Rmd
@@ -56,7 +56,7 @@ The book and all other content for this course are hosted under an open source l
 
 ### Assessments {-}
 
-There will be 2 mid-term exams and one final exam.
+We will assess participation in class and conduct a final exam.
 
 ## Team {-}
 
