always allow html output

--- a/06-MultipleReg.Rmd
+++ b/06-MultipleReg.Rmd
@@ -53,18 +53,19 @@ scatter3D(z = mtcars$mpg, x = mtcars$wt, y = mtcars$hp, pch = 20, cex = 1.5,
 
 From this visualization we can see that cars with more horse power and greater weight, in general travel fewer miles per gallon of combustible, hence we observe a plane that is downward sloping in both the *weight* and *horse power* directions. Suppose now we wanted to know impact of `hp` on `mpg` *in isolation*, so as if we could ask 
 
-```{block,type="info"}
+```{block,type="note"}
 <center>
 Keeping the value of `wt` fixed for a certain car, what would be the impact on `mpg` be if we were to increase **only** its `hp`?
 </center>
 ```
 
-We ask this kind of question all the time in econometrics. In figure \@(fig:plane3Dreg) you clearly see that 
+We ask this kind of question all the time in econometrics. In figure \@(fig:plane3Dreg) you clearly see that both explanatory variables have a negative impact on the outcome of interest, but it's kind of hard to read off *how negative* each variable in isolation. Mutiple regression to the rescue!
 
-## An Example
+```{r,echo=FALSE}
+summary(fit)
+```
 
-
-### California Test Scores 2
+## California Test Scores 2
 
 With the tools introduced in \@ref(lm-example1) it is fairly straigtforward to estimate models with more than one dependent variables, for example adding families' average income to our previous model:
 
